--- a/mystyle.css
+++ b/mystyle.css
@@ -142,6 +142,7 @@ html {
     background-color: transparent;
     cursor: pointer;
     padding: 1.3333rem;
+    margin-right: 25px;
 }
 
 .toggle.active .icon {
@@ -336,7 +337,7 @@ p {
 
     .area {
         display: block;
-        width: 100%;
+        width: 95%;
         position: absolute;
         background-color: white;
         
